@@ -14,7 +14,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -33,12 +32,10 @@ public class MapperUtils {
             errorEntity.setId(controlDto.getError().getId());
             controlEntity.setError(errorEntity);
         }
-
         return controlEntity;
     }
 
     public ControlDto controlEntityToControlDto(final ControlEntity controlEntity) {
-
         return modelMapper.map(controlEntity, ControlDto.class);
     }
 
@@ -50,16 +47,15 @@ public class MapperUtils {
         return modelMapper.map(requestEntity, RequestDto.class);
     }
 
-
     public List<MetadataResult> metadataDtosToMetadataEntities(final List<MetadataDto> metadataDtoList) {
         return metadataDtoList.stream()
                 .map(metadataDto -> modelMapper.map(metadataDto, MetadataResult.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<MetadataResultDto> metadataResultEntitiesToMetadataResultDtos(final List<MetadataResult> metadataResultList) {
         return CollectionUtils.emptyIfNull(metadataResultList).stream()
                 .map(metadataResult -> modelMapper.map(metadataResult, MetadataResultDto.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
